web-infras/parser/tests/fixtures/babel/core/categorized/invalid-assignment-pattern-8/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,2)
1|(b = (a -= 1)) = t
 |^
